update deploy yml