@@ -1,15 +1,14 @@
-FROM maven:3.6.3 AS maven
-# Create a workdir for our app
-WORKDIR /usr/src/app
-COPY . /usr/src/app
+FROM gradle:4.7.0-jdk8-alpine AS build
+COPY --chown=gradle:gradle . /home/gradle/src
+WORKDIR /home/gradle/src
+RUN gradle build --no-daemon
 
-# Compile and package the application to an executable JAR
-RUN mvn clean package -DskipTests
-# Using java 11
-FROM openjdk:11-jdk
+FROM openjdk:8-jre-slim
 
-ARG JAR_FILE=/usr/src/app/target/*.jar
-# Copying JAR file
-COPY --from=maven ${JAR_FILE} app.jar
+EXPOSE 8080
 
-ENTRYPOINT ["java","-jar","/app.jar"]
+RUN mkdir /app
+
+COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
+
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
